add-feat: return book